[package]
name = "imgs-renamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
walkdir = "2.4.0"
image = "0.24.9"
chrono = "0.4"
rand = "0.8"
log = "0.4"
fern = "0.6"
indicatif = "0.17.8"

[profile.release]
lto = true
opt-level = 'z'
debug = false